--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <br>
     <br>
     <br>
+    <h2>type a funny word (noun)</h2>
+    <br>
+    <br>
+    <br>
+    
     <input type="string" ng-model="noun">
     <br>
     <br>
