--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   </br>
       <div id="fadein">
       <h1>
-        You can do it, Mona!
+        dummy page
       </h1>
   </br>
       <p>
-        Hope your zebra could schedule in some sleep thread in your busy life and cash some happiness for easier access!
+        dummy page
       </p>
       </div><!--fadein--></center>
   </body>
